# AgentOps-Framework

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
agent_app/: __init__.py  cli.py
agent_app/adapters/: __init__.py  fastapi.py  openai_agents.py  recovery_admin.py  recovery_ui.py
agent_app/config/: loader.py  schema.py
agent_app/console/: __init__.py  router.py
agent_app/core/: __init__.py  agent_spec.py  app.py  context.py  result.py  routing.py  tool_spec.py  workflow.py
agent_app/evals/: assertions.py  canary.py  runner.py  schema.py
agent_app/governance/: __init__.py  approval.py  audit.py  permission.py  policy.py  (+38 more)
benchmarks/: bench_dag.py
docker/: README.md  entrypoint.sh  healthcheck.sh
docs/: dag_snapshot.md  deployment_phase64.md  evals.md  observability.md  openai_agents_app_framework.md  openai_backend.md  phase62_report.md  policy_console.md  policy_release.md  policy_replay.md  policy_reporting.md  recovery_admin_console.md  release_checklist_phase25.md  release_checklist_phase26.md  release_checklist_phase28.md  release_checklist_phase29.md  release_checklist_phase30.md  release_checklist_phase31.md  release_checklist_phase32.md  release_checklist_phase33.md  release_checklist_phase34.md  release_checklist_phase35.md  release_checklist_phase36.md  release_checklist_phase37.md  release_checklist_phase38.md  release_checklist_phase39.md  release_checklist_phase40.md  release_checklist_phase41.md  release_checklist_phase42.md  release_checklist_phase43.md  release_checklist_phase44.md  release_checklist_phase45.md  release_checklist_phase46.md  release_checklist_phase47.md  release_checklist_phase48.md  release_checklist_phase49.md  release_checklist_phase50.md  release_checklist_phase51.md  release_checklist_phase52.md  release_checklist_phase53.md  (+17 more)
scripts/: benchmark_tracing.py  count_code.sh  smoke_control_plane.sh  smoke_docker.sh  smoke_k8s_manifests.sh
tests/: conftest.py
(+655 files in other folders)
